--- a/checkout.html
+++ b/checkout.html
@@ -1,4 +1,4 @@
-5<!doctype html>
+<!doctype html>
 <html>
 
 <head>
@@ -8,17 +8,18 @@
 </head>
 <body>
 <h1>Checkout</h1>
-<div class="container">
+<div class="checkout-container">
     <div class="Cart">
 
     </div>
     <div class="Totals">
-        <h1 id="subtotal">Subtotal: $0.00</h1>
-        <h1 id="tax">Tax: $0.00</h1>
-        <h1 id="total">Total: $0.00</h1>
-        <h1 id="total-cals">Cals: 0 kcal</h1>
+        <h1 class="total" id="subtotal">Subtotal: $0.00</h1>
+        <h1 class="total" id="tax">Tax: $0.00</h1>
+        <h1 class="total" id="total">Total: $0.00</h1>
+        <h1 class="total" id="total-cals">Cals: 0 kcal</h1>
     </div>
 </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="checkout.js"></script>
 </html>
