--- a/menu.html
+++ b/menu.html
@@ -178,7 +178,7 @@
                     <a href="customize.html">
                         <img src="Assets/Images/Buttons/button_customize.png" class="btn-customize">
                     </a>
-                    <a href="index.html">
+                    <a>
                         <img src="Assets/Images/Buttons/button_add.png" class="btn-add" id="add-burger7">
                     </a>
                 </div>
@@ -222,7 +222,7 @@
                     <a href="customize.html">
                         <img src="Assets/Images/Buttons/button_customize.png" class="btn-customize">
                     </a>
-                    <a href="index.html">
+                    <a>
                         <img src="Assets/Images/Buttons/button_add.png" class="btn-add">
                     </a>
                 </div>
@@ -846,6 +846,7 @@
                         <label for="psw"><b>Password</b></label>
                         <input type="password" placeholder="Enter Password" name="psw" required>
                     </div>
+                    <a href="">Create an account </a>
                     <div class="form-container" id="form-buttons">
                         <button type="submit" class="btn-login">Login</button>
                         <button type="button" class="cancelbtn">Cancel</button>
