Co-authored-by: AaronSalo <saloamj@gmail.com> Co-authored-by: Andy Tan <andy.tan278@gmail.com> Co-authored-by: Arvind Maan <arvindmaan1199@gmail.com>

--- a/checkout.html
+++ b/checkout.html
@@ -17,7 +17,14 @@
         <h1 class="total" id="tax">Tax: $0.00</h1>
         <h1 class="total" id="total">Total: $0.00</h1>
         <h1 class="total" id="total-cals">Cals: 0 kcal</h1>
+        <a href="end.html">
+            <button class="checkout-button">
+                Checkout
+            </button>
+        </a>
     </div>
+    
+    
 </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
