--- a/customize.html
+++ b/customize.html
@@ -105,9 +105,10 @@
 			</a>
 
 		</nav>
+
 		<div class="customize-container">
-			<div class=c
-			<div lass="customize-row">
+
+			<div class="customize-row">
 				<img src="Assets/Images/Customize/split_bun.png" class="customize-row-image">
 			</div>
 			<div class="customize-row">
@@ -150,7 +151,7 @@
 		<nav class="sidebar">
 			<a class="cart" href="menu.html">
 				<!-- <i class="fas fa-arrow-circle-right"></i> -->
-				<img src="Assets/Images/Buttons/button_add.png" width="100%"></img>
+				<img src="Assets/Images/Buttons/button_add.png" width="100"></img>
 			</a>
 		</nav>
 
