--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/3d46d02806.js"></script>
 </head>
   
-<body background-image= "url('Assets/Images/Burger_old.jpg');">
+<body>
     <div class="title">
         <img src="Assets/Images/quick_cuisine.png" class="logo" alt="Quick Cuisine"></img>
         <a class="orderbtn" href="menu.html">
