--- a/menu.html
+++ b/menu.html
@@ -861,6 +861,7 @@
             <a class="login">
                 <i class="fas fa-user-circle"></i>
             </a>
+			<h1 class="cart-counter" id="cart-counter"> 0 </h1>
             <a class="cart" href="checkout.html">
                 <i class="fas fa-shopping-cart"></i>
             </a>
