added some things

--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="checkout-title">
-        <h1 class="checkout-header">Checkout</h1>
+        <h1 class="checkout-header">Cart</h1>
     </div>
     <div class="checkout-container">
         <div class="Cart">
