--- a/end.html
+++ b/end.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+            <link rel="stylesheet" type="text/css" href="main.css">
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+            <script src="https://kit.fontawesome.com/3d46d02806.js"></script>
     </head>
     <body>
-        <h1>Thanks for using quick cuisine!</h1>
-        <h2>Your order will be ready in: NEVER, this is a protoype.</h2>>
+        <h1 class="title">Thanks for using quick cuisine!</h1>
+        <h1 class="title">Your order will be ready in: NEVER, this is a protoype.</h2>
     </body>
 
 </html>
