--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="row-buttons">
                     <a href="customize.html">
-                        <img src="Assets/Images/Buttons/button_customize.png" class="btn-customize">
+                        <img src="Assets/Images/Buttons/button_customize.png" class="btn-customize" id="customize-burger1">
                     </a>
                     <a>
                         <img src="Assets/Images/Buttons/button_add.png" class="btn-add" id="add-burger1">
@@ -253,7 +253,7 @@
             <div class="menu-row" style="background-color: rgb(70,70,70);">
                 <img src="Assets/Images/Food/burger_classic.png" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> $15.99 &nbsp♦ &nbspDouble Chicken Burg</h1>
+                    <h1 class="row-title"> $15.99 &nbsp♦ &nbspDouble Chicken Burger</h1>
                     <div class="food-groups">
                         <img src="Assets/Images/Buttons/group_dairy.png" class="food-group-item"></img>
                         <img src="Assets/Images/Buttons/group_vegetable.png" class="food-group-item"></img>
@@ -297,7 +297,7 @@
             <div class="menu-row" style="background-color: rgb(70,70,70);">
                 <img src="Assets/Images/Food/burger_classic.png" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> $6.49 &nbsp♦ &nbspMermaid Man and Chicken Burger Boy </h1>
+                    <h1 class="row-title"> $6.49 &nbsp♦ &nbspYet Another Chicken Burger </h1>
                     <div class="food-groups">
                         <img src="Assets/Images/Buttons/group_dairy.png" class="food-group-item"></img>
                         <img src="Assets/Images/Buttons/group_vegetable.png" class="food-group-item"></img>
@@ -319,7 +319,7 @@
             <div class="menu-row" style="background-color: rgb(48,48,48);">
                 <img src="Assets/Images/Food/burger_classic.png" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> $3.49 &nbsp♦ &nbspChicken Booger </h1>
+                    <h1 class="row-title"> $3.49 &nbsp♦ &nbspChicken Burger Again </h1>
                     <div class="food-groups">
                         <img src="Assets/Images/Buttons/group_dairy.png" class="food-group-item"></img>
                         <img src="Assets/Images/Buttons/group_vegetable.png" class="food-group-item"></img>
@@ -341,7 +341,7 @@
             <div class="menu-row" style="background-color: rgb(70,70,70);">
                 <img src="Assets/Images/Food/burger_classic.png" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> $2.99 &nbsp♦ &nbspxD Chicken Burger xD </h1>
+                    <h1 class="row-title"> $2.99 &nbsp♦ &nbspMore Chicken Burgers </h1>
                     <div class="food-groups">
                         <img src="Assets/Images/Buttons/group_dairy.png" class="food-group-item"></img>
                         <img src="Assets/Images/Buttons/group_vegetable.png" class="food-group-item"></img>
@@ -635,7 +635,7 @@
             <div class="menu-row" style="background-color: rgb(48,48,48);">
                 <img src="Assets/Images/Food/burger_classic.png" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> The crabby crab patty </h1>
+                    <h1 class="row-title"> Seafoods </h1>
                     <div class="food-groups">
                         <img src="Assets/Images/Buttons/group_dairy.png" class="food-group-item"></img>
                         <img src="Assets/Images/Buttons/group_vegetable.png" class="food-group-item"></img>
@@ -657,7 +657,7 @@
             <div class="menu-row" style="background-color: rgb(70,70,70);">
                 <img src="Assets/Images/Food/burger_classic.png" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> Lobster Pizza </h1>
+                    <h1 class="row-title"> Lobster </h1>
                     <div class="food-groups">
                         <img src="Assets/Images/Buttons/group_dairy.png" class="food-group-item"></img>
                         <img src="Assets/Images/Buttons/group_vegetable.png" class="food-group-item"></img>
@@ -792,7 +792,7 @@
             <div class="menu-row" style="background-color: rgb(48,48,48);">
                 <img src="Assets/Images/Food/burger_classic.png" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> The Biggest Dessert, Ask Anyone </h1>
+                    <h1 class="row-title"> The Biggest Dessert</h1>
                     <div class="food-groups">
                         <img src="Assets/Images/Buttons/group_dairy.png" class="food-group-item"></img>
                         <img src="Assets/Images/Buttons/group_vegetable.png" class="food-group-item"></img>
@@ -814,7 +814,7 @@
             <div class="menu-row" style="background-color: rgb(70,70,70);">
                 <img src="Assets/Images/Food/burger_classic.png" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> Lobster Dessert </h1>
+                    <h1 class="row-title"> Dessert </h1>
                     <div class="food-groups">
                         <img src="Assets/Images/Buttons/group_dairy.png" class="food-group-item"></img>
                         <img src="Assets/Images/Buttons/group_vegetable.png" class="food-group-item"></img>
@@ -861,8 +861,8 @@
             <a class="login">
                 <i class="fas fa-user-circle"></i>
             </a>
+            <a class="cart" href="checkout.html" id="go-to-checkout">
 			<h1 class="cart-counter" id="cart-counter"> 0 </h1>
-            <a class="cart" href="checkout.html">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </nav>
