configured login positioning

--- a/end.html
+++ b/end.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1 class="title">Thanks for using quick cuisine!</h1>
-        <h1 class="title">Your order will be ready in: NEVER, this is a protoype.</h2>
+        <h1 class="title">Your order will be ready in: NEVER, this is a prototype.</h2>
     </body>
 
 </html>
